fixed the extra spaces on the hostel manger name and password.

--- a/Episilion-hostels/src/HomePage/HomePage.css
+++ b/Episilion-hostels/src/HomePage/HomePage.css
@@ -100,6 +100,7 @@
     /* min-width: 170px; */
     max-height: 90px;
     min-height: 100px;
+    width: 100vw;
   }
 }
 
